--- a/src/components/home/homeStyles.scss
+++ b/src/components/home/homeStyles.scss
@@ -43,9 +43,9 @@
 
         .topHomeContainer {
             width: 100%;
-            max-height: 250px;
             display: flex;
             justify-content: space-between;
+            overflow: hidden;
         }
 
         .gameCodeInput{
